<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">荔湾供电局资产清查辅助工具</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scan_qrcode">扫描二维码</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="descImage">图片描述</string>
    <string name="btn_back">返 回</string>
    <string name="qrcode_scan">二维码扫描</string>
    <string name="materialsNo">物资编码</string>
    <string name="imageDesc">这是图片</string>
    <string name="tip_enter_materialsNo">输入物资编号</string>
    <string name="ledgerInfo">台账信息</string>
    <string name="cardNo">卡片编号</string>
    <string name="devicesNo">设备型号</string>
    <string name="commissioningDate">投运日期</string>
    <string name="manufacturer">生产厂家</string>
    <string name="remark">备 注</string>
    <string name="cost">原 值</string>
    <string name="cardInfo">卡片信息</string>
    <string name="FID">FID</string>
    <string name="assetsName">资产名称</string>
    <string name="specification">规格型号</string>
    <string name="manufacturer1">制造商</string>
    <string name="propertyRight">产 权</string>
    <string name="scan_data">扫一扫</string>
    <string name="popup_menu_search_materialsNo" >搜索物资编码</string>
    <string name="popup_menu_add_materials_info" >添加物资信息</string>
    <string name="popup_menu_update_database_from_excel" >更新数据库数据</string>
    <string name="popup_menu_export_database_data_to_Excel" >导出数据到Excel</string>
    <string name="popup_menu_about_us" >版权所有</string>
    <string name="popup_menu_exit" >退 出</string>
    <string name="note" >备 注</string>
    <string name="tip_null" >暂无填写</string>
    <string name="edit" >编 辑</string>
    <string name="edit_title_note" >编辑备注信息</string>
    <string name="title_materials_info" >物资信息</string>
    <string name="edit_title_materialsNo" >编辑物资编码</string>
    <string name="tip_note_info" >备注信息</string>
    
    <string name="ledger_info_cardNo" >卡片编号</string>
    <string name="ledger_info_devicesNo" >设备编号</string>
    <string name="ledger_info_commissioningDate" >投运日期</string>
    <string name="ledger_info_manufacturer" >生产厂家</string>
    <string name="ledger_info_remark" >备 注</string>
    <string name="ledger_info_cost" >原 值</string>
    
    <string name="card_info_FID" >FID</string>
    <string name="card_info_assetsName" >资产名称</string>
    <string name="card_info_specification" >规格型号</string>
    <string name="card_info_manufacturer" >制造商</string>
    <string name="card_info_commissioningDate" >投运日期</string>
    <string name="card_info_propertyRight" >产 权</string>
    
    <string name="title_search_materialsNo" >搜索物资编码</string>
    <string name="tip_search_materialsNo" >搜索物资编码</string>
    
    
    <string name="item_look_materials_info" >查看物资信息</string>
    <string name="item_delete_materials_info" >删除物资信息</string>
    <string name="item_edit_materials_info" >编辑物资信息</string>
    
    <string name="tip_enter_username" >用户名/邮箱</string>
    <string name="tip_enter_password" >密码</string>
    <string name="btn_login" >登 录</string>
    <string name="title_login" >用户登录</string>
    
    
    
    
    

</resources>
