<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/popup_menu_update_database_from_excel"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/popup_menu_update_database_from_excel"/>
    <item
        android:id="@+id/popup_menu_export_database_data_to_Excel"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/popup_menu_export_database_data_to_Excel"/>
    <item
        android:id="@+id/popup_menu_about_us"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/popup_menu_about_us"/>
    <item
        android:id="@+id/popup_menu_exit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/popup_menu_exit"/>

</menu>