<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <include layout="@layout/login_custom_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:focusableInTouchMode="true"
                android:hint="@string/tip_enter_username"
                android:maxLength="36"
                android:textSize="16sp"
                bootstrapbutton:be_roundedCorners="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:orientation="horizontal" >

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:hint="@string/tip_enter_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textSize="16sp"
                bootstrapbutton:be_roundedCorners="true" />
        </LinearLayout>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_margin="10dip"
            android:text="@string/btn_login"
            android:textSize="16sp"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_text_gravity="center"
            bootstrapbutton:bb_type="primary" />
    </LinearLayout>

</LinearLayout>