<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/edit_add_ledger_info_custom_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/default_bg"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/layout_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/ledger_info_cardNo"
                    android:textColor="#f00"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/ledger_info_cardNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/add_edit_text_field"
                    android:inputType="none"
                    android:maxLength="66"
                    android:maxLines="5"
                    android:minHeight="40dip"
                    android:minLines="1"
                    android:singleLine="false"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/layout_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/ledger_info_devicesNo"
                    android:textColor="#f00"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/ledger_info_devicesNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/add_edit_text_field"
                    android:inputType="none"
                    android:maxLength="66"
                    android:minHeight="40dip"
                    android:minLines="1"
                    android:singleLine="false"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/layout_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/ledger_info_commissioningDate"
                    android:textColor="#f00"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/ledger_info_commissioningDate"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/button_selector"
                    android:textColor="#000"
                    android:textSize="16.0dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/layout_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/ledger_info_manufacturer"
                    android:textColor="#f00"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/ledger_info_manufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/add_edit_text_field"
                    android:inputType="none"
                    android:maxLength="66"
                    android:minHeight="40dip"
                    android:minLines="1"
                    android:singleLine="false"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/layout_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/ledger_info_remark"
                    android:textColor="#f00"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/ledger_info_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/add_edit_text_field"
                    android:inputType="none"
                    android:maxLength="66"
                    android:minHeight="40dip"
                    android:minLines="1"
                    android:singleLine="false"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/layout_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/ledger_info_cost"
                    android:textColor="#f00"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/ledger_info_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/add_edit_text_field"
                    android:inputType="none"
                    android:maxLength="66"
                    android:minHeight="40dip"
                    android:minLines="1"
                    android:singleLine="false"
                    android:textColor="#000" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>